--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
       </li>
       <li>
-        <%= link_to "投稿", "#" %>
+        <%= link_to "投稿", root_path %>
       </li>
     <% else %> 
       <li>
