--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,1 +1,30 @@
 <%= render "foods/new", food: @food %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+    <% @foods.each do |food| %>
+      <%= link_to food_path(food) do %>
+      <table class="table text-center">
+        <tr>
+          <th>ご飯画像</th>
+          <th><%= attachment_image_tag food, :image, :fill, 50, 50, format: 'jpeg' %></th>
+        </div>
+        </tr>
+        <tr>
+          <th>お店</th>
+          <th><%= food.shop_name %></th>
+        </tr>
+        <tr>
+          <th>説明</th>
+          <th><%= food.caption %></th>
+        </tr>
+      </thead>
+      </table>
+      <br>
+      <% end %>
+    <% end %>
+    </div>
+  </div>
+</div>
+ 
