--- a/app/views/foods/_new.html.erb
+++ b/app/views/foods/_new.html.erb
@@ -1,11 +1,33 @@
-<h2>投稿フォーム</h2>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">新規投稿</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <%= form_with model: food, remote: true do |f| %>
+        <div class="modal-body">
+          <div class="form-group">
+            <%= f.label :image, "ごはん画像" %>
+            <%= f.attachment_field :image %>
+          </div>
+          <div class="form-group">
+            <%= f.label :shop_name, "お店"%>
+            <%= f.text_field :shop_name, class:"form-control" %>
+          </div>
+          <div class="form-group">
+          <%= f.label :caption, "キャプション" %>
+          <%= f.text_area :caption, class:"form-control" %>
+          </div>
+       </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+          <%= f.submit "投稿", class:"btn btn-primary" %>
+        </div>
+    　<% end %>
+    </div>
+  </div>
+</div>
 
-<%= form_with model: food, local:true do |f| %>
-  <h4>ごはん画像</h4>
-  <p><%= f.attachment_field:image %></p>
-  <h4>お店</h4>
-  <p><%= f.text_field :shop_name %></p>
-  <h4>キャプション</h4>
-  <p><%= f.text_area :caption %></p>
-  <p><%= f.submit "投稿" %></p>
-<% end %>
