--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,11 @@
           <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
             <li class="nav-item">
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                新規投稿
+              </button>
+            </li>
+            <li class="nav-item">
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark'  %>
             </li>
             <li class="nav-item">
