--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,22 +1,29 @@
-<% foods.each do |food| %>
-  <div class="card w-50 mt-4 mr-4 shadow-lg">
-    <%= link_to food_path(food) do %>
-        <%= attachment_image_tag food, :image, :fill, 230, 230, format: 'jpeg' %>
-    <% end %>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-2">
-        </div>
-        <div class="col-10">
-          <p class="card-title">
-            <%= link_to(food_path(food), class:"text-dark") do %>
-              <strong><i class="far fa-flag"></i><span> <%= food.shop_name %></span></strong>
-            <% end %>
-          </p>
-          <p class="card-text">説明:<%= food.caption %></th><br>
-          <span><i class="fas fa-user">ユーザー:</i> By <%= food.user.name %></span>
+<div class="container">
+  <div class="row o-4column">
+    <% foods.each do |food| %>
+    <div class="col-md-3">
+      <div class="card w-100 mt-4 mr-4 shadow-lg">
+        <%= link_to food_path(food) do %>
+          <%= attachment_image_tag food, :image, width: '100%', height: '100%', format: 'jpeg' %>
+        <% end %>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-10">
+                <p class="card-title">
+                  <%= link_to(food_path(food), class:"text-dark") do %>
+                    <strong><i class="far fa-flag"></i><span> <%= food.shop_name %></span></strong>
+                  <% end %>
+                </p>
+                <p class="card-text">説明:<%= food.caption %></p><br>
+                  <span><i class="fas fa-user">ユーザー:</i> By <%= food.user.name %></span>
+                <p class="card-text">
+                  <%= link_to "#{food.food_comments.count} コメント", food_path(food.id) %>
+                </p>
+              </div>
+            </div>
           </div>
       </div>
-    </div>
-  </div>
-<% end %>
+    </div> 
+    <% end %>
+  </div> 
+</div>
