--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -14,11 +14,10 @@
                     <strong><i class="far fa-flag"></i><span> <%= food.shop_name %></span></strong>
                   <% end %>
                 </p>
-                <p class="card-text">説明:<%= food.caption %></p><br>
-                  <span><i class="fas fa-user">ユーザー:</i> By <%= food.user.name %></span>
-                <p class="card-text">
-                  <%= link_to "#{food.food_comments.count} コメント", food_path(food.id) %>
-                </p>
+                <p class="card-text">説明:<%= food.caption %></p>
+                <span><i class="fas fa-user"></i>投稿者:  <%= food.user.name %></span> | 
+                <span><i class="fas fa-comments"></i><%= link_to "#{food.food_comments.count}", food_path(food.id) %></span> | 
+                <span><i class="fas fa-hand-holding-heart"></i><%= link_to "#{food.likes.count}", food_path(food.id) %></span>
               </div>
             </div>
           </div>
