--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -19,6 +19,19 @@
                 <%= link_to "削除", food_path(@food_detail), method: :delete %>
               <% end %>
               <%= link_to "戻る", foods_path %></th>
+              <% if @food_detail.liked_by?(current_user) %>
+              <p>
+                <%= link_to food_likes_path(@food_detail), method: :delete do %>
+                  ♥<%= @food_detail.likes.count %> いいね
+                <% end %>
+              </p>
+              <% else %>
+              <p>
+                <%= link_to food_likes_path(@food_detail), method: :post do %>
+                  ♡<%= @food_detail.likes.count %> いいね
+                <% end %>
+              </p>
+            <% end %>
           </div>
         </div>
         <div class="col-md-6">
