--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -2,7 +2,7 @@
   <div class="row o-4column">
     <% foods.each do |food| %>
     <div class="col-md-3">
-      <div class="card w-100 mt-4 mr-4 shadow-lg">
+      <div class="card w-100 mt-4 mb-4 mr-4 shadow-lg">
         <%= link_to food_path(food) do %>
           <%= attachment_image_tag food, :image, width: '100%', height: '100%', format: 'jpeg' %>
         <% end %>
@@ -24,5 +24,9 @@
       </div>
     </div> 
     <% end %>
+    <div class="mx-auto">
+    <%= paginate foods %>
+    </div>
   </div> 
 </div>
+
