--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -1,1 +1,28 @@
-<h2>投稿を編集する</h2>
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">投稿編集</h5>
+      </div>
+    　<%= form_with model: @food_detail, local: true do |f| %>
+        <div class="modal-body">
+          <div class="form-group">
+            <%= f.label :image, "ごはん画像" %>
+            <%= f.attachment_field :image %>
+          </div>
+          <div class="form-group">
+            <%= f.label :shop_name, "お店"%>
+            <%= f.text_field :shop_name, class:"form-control" %>
+          </div>
+          <div class="form-group">
+          <%= f.label :caption, "キャプション" %>
+          <%= f.text_area :caption, class:"form-control" %>
+          </div>
+        </div>
+        <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">戻る</button>
+         <%= f.submit "編集", class:"btn btn-primary" %>
+        </div>
+    　<% end %>
+      </div>
+  </div>
+</div>
