--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,16 @@
           <% if user_signed_in? %>
             <% if current_page?(root_path) %>
             <li class="nav-item">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+              <button type="button" class='nav-link text-white btn btn-primary' data-toggle="modal" data-target="#exampleModal">
                 新規投稿
               </button>
             </li>
             <% end %>
             <li class="nav-item">
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-white btn btn-primary'  %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "マイページ", user_path(current_user), class: 'nav-link text-white btn btn-primary'  %>
             </li>
             <li class="nav-item">
               <%= link_to "グルメ一覧", root_path, class: 'nav-link text-white btn btn-primary'  %>
