--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,11 @@
-<div class="profile-container">
-  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%><br>
-  <h3 class="profile-name"><%= @user.name %></h3>
-  <% if @user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
-</div>
-  
-<div class="card-list-containar py-5 d-flex justify-content-between foods"> 
+<div class="card-list-containar  d-flex justify-content-between foods"> 
+  <div class="profile-container">
+    <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"%><br>
+    <h3 class="profile-name"><%= @user.name %></h3>
+    <% if @user.id == current_user.id %>
+      <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+    <% end %>
+  </div>
   <div class="container">
     <div class="row o-4column">
       <% @foods.each do |food| %>
