topページレイアウト調整

--- a/app/views/users/follower_list.html.erb
+++ b/app/views/users/follower_list.html.erb
@@ -1,4 +1,13 @@
-<% @user.followers.each do |user| %>
-  <%= user.name %>
-  <%= link_to '詳細', user_path(user) %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div calss="col-md-6">
+    <% @user.followers.each do |user| %>
+      <%= user.name %>
+      <%= link_to '詳細', user_path(user) %>
+      <% end %>
+     </div>
+     <div calss="col-md-6">
+      ffffff 
+     </div>
+  </div>
+</div>
