--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,13 @@
-<h1>Welcome to Foodgram</h1>
+<div class="container">
+  <div class="section">
+    <div class="row justify-content-center">
+      <h1>Welcome to Foodgram</h1><br>
+    </div>
+    <br>
+    <div>
+      <p class="text-center">グルメ好きな人のための</p><br>
+      <p class="text-center">グルメ探しSNSサービス</p>
+    </div>
+  </div>
+</div>
 
