--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,6 +7,7 @@
     <div>
       <p class="text-center">グルメ好きな人のための</p><br>
       <p class="text-center">グルメ探しSNSサービス</p>
+      <%= render 'searches/form' %>
     </div>
   </div>
 </div>
