--- a/app/views/users/follow_list.html.erb
+++ b/app/views/users/follow_list.html.erb
@@ -1,4 +1,20 @@
-<% @user.all_following.each do |user| %>
-  <%= user.name %> 
-  <%= link_to '詳細', user_path(user) %>
-<% end %>
+<div class="col-6 mx-auto">
+  <table class="table">
+    <thead>
+      <th>ユーザー名</th>
+      <th>紹介文</th>
+      <th>フォロー数</th>
+      <th>フォロワー数</th>
+      <th colspan="2"></th>
+    </thead>
+    <% @user.all_following.each do |user| %>
+    <tbody>
+      <td><%= user.name %></td> 
+      <td><%= user.introduction %></td>
+      <td><%= user.follow_count %></td>
+      <td><%= user.followers_count %></td>
+      <td><%= link_to '詳細', user_path(user) %></td>
+    </tbody>
+    <% end %>
+  </table>
+</div>
