--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<div class="card-list-containar  d-flex justify-content-between foods"> 
-  <div class="profile-container">
+<div class="card-list-containar d-flex justify-content-between foods"> 
+  <div class="profile-container mt-4 mb-4 mx-auto shadow-sm">
     <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"%><br>
     <h3 class="profile-name"><%= @user.name %></h3>
     <div>
