--- a/app/views/users/follow_list.html.erb
+++ b/app/views/users/follow_list.html.erb
@@ -1,6 +1,7 @@
 <div class="col-6 mx-auto">
-  <table class="table">
+  <table class="table text-center">
     <thead>
+      <th>プロフィール画像</th>
       <th>ユーザー名</th>
       <th>紹介文</th>
       <th>フォロー数</th>
@@ -9,6 +10,7 @@
     </thead>
     <% @user.all_following.each do |user| %>
     <tbody>
+      <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"%><br></td>
       <td><%= user.name %></td> 
       <td><%= user.introduction %></td>
       <td><%= user.follow_count %></td>
