--- a/app/views/users/follower_list.html.erb
+++ b/app/views/users/follower_list.html.erb
@@ -1,13 +1,26 @@
-<div class="container">
-  <div class="row">
-    <div calss="col-md-6">
+<div class="col-6 mx-auto">
+  <table class="table text-center" >
+    <thead>
+      <tr>
+      <th>プロフィール画像</th>
+      <th>ユーザー名</th>
+      <th>紹介文</th>
+      <th>フォロー数</th>
+      <th>フォロワー数</th>
+      <th colspan="2"></th>
+      </tr>
+    </thead>
     <% @user.followers.each do |user| %>
-      <%= user.name %>
-      <%= link_to '詳細', user_path(user) %>
-      <% end %>
-     </div>
-     <div calss="col-md-6">
-      ffffff 
-     </div>
-  </div>
+    <tbody>
+      <tr>
+      <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"%><br></td>
+      <td><%= user.name %></td> 
+      <td><%= user.introduction %></td>
+      <td><%= user.follow_count %></td>
+      <td><%= user.followers_count %></td>
+      <td><%= link_to '詳細', user_path(user) %></td>
+      </tr>
+    </tbody>
+    <% end %>
+  </table>
 </div>
