--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
   <div class="profile-container mt-4 mb-4 mx-auto shadow-sm">
     <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"%><br>
     <h3 class="profile-name"><%= @user.name %></h3>
+    <h3><%= @user.introduction %></h3>
     <div>
       <%= @user.follow_count %>
       <%= link_to "フォロー", {controller: :users,action: :follow_list,user_id: @user.id}, method: :get %>
@@ -12,11 +13,13 @@
     </div>
         <% if current_user.id != @user.id %>
       <%= render 'users/follow_form', user: @user %>
+      <% else %>
       <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
       <% end %>
   </div>
   <div class="container">
     <div class="row o-4column">
+  <% if @food.present? %>
       <% @foods.each do |food| %>
       <div class="col-md-3">
         <div class="card w-100 mt-4 mb-4 mr-4 shadow-lg">
@@ -40,4 +43,7 @@
       <%= paginate @foods %>
     </div>
   </div>
+  <% else %>
+  <h2>投稿がまだありません。</h2>
+  <% end %>
 </div>
