--- a/app/views/users/follower_list.html.erb
+++ b/app/views/users/follower_list.html.erb
@@ -1,4 +1,5 @@
 <div class="col-6 mx-auto">
+  <div class="card">
   <table class="table text-center" >
     <thead>
       <tr>
@@ -23,4 +24,5 @@
     </tbody>
     <% end %>
   </table>
+  </div>
 </div>
