--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="container">
     <div class="row o-4column">
-  <% if @food.present? %>
+  <% if @foods.present? %>
       <% @foods.each do |food| %>
       <div class="col-md-3">
         <div class="card w-100 mt-4 mb-4 mr-4 shadow-lg">
