--- a/app/views/users/follow_list.html.erb
+++ b/app/views/users/follow_list.html.erb
@@ -1,4 +1,5 @@
 <div class="col-6 mx-auto">
+<div class="card shadow-lg">
   <table class="table text-center">
     <thead>
       <th>プロフィール画像</th>
@@ -19,4 +20,5 @@
     </tbody>
     <% end %>
   </table>
+  </div>
 </div>
