--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
       <th colspan="2"></th>
       </tr>
     </thead>
-    <% @user.followers.each do |user| %>
+    <% @users.each do |user| %>
     <tbody>
       <tr>
       <td><%= attachment_image_tag user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"%><br></td>
