--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,12 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+header {
+  background: #fff;
+  padding: 10px 20px;
+  position: fixed;
+  justify-content: space-between;
+  width: 100%;
+  z-index: 1;
+}
