--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    
   </head>
 
   <body class="d-flex flex-column vh-100">
-  <header class="shadow-sm">
+  <header class="shadow-md">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
         <a class="navbar-brand p-3" href="/"></a>
