--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,11 +1,11 @@
-<h2>gmap</h2>
-<!-- form_withはデフォルトでremote: trueの挙動になります -->
+<div class="map-title">
+  <h2>地図検索</h2>
 <%= form_with url: map_request_path, method: :get do |f|%>
   <%= f.text_field :address %>
   <%= f.submit '地図表示' %>
 <% end %>
-
+</div>
 
 <div id='map'></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1Wc_BJv2HTBz997yQO9ffXM36Z6uObQ0&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
