--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,18 +20,8 @@
 header {
   background: #fff;
   padding: 10px 20px;
+  position: fixed;
   justify-content: space-between;
   width: 100%;
   z-index: 1;
-}
-
-#map {
-  width: 100%;
-  height: 500px;
-  margin: auto;
-  justify-content: center;
-}
-
-.map-title {
-  margin: auto;
 }
