--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -8,4 +8,4 @@
 
 <div id='map'></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1Wc_BJv2HTBz997yQO9ffXM36Z6uObQ0&callback=initMap" async defer></script>
